# AnyBlok_FastAPI

./: .isort.cfg  .pre-commit-config.yaml  .ruff.toml  Makefile  README.rst  app.cfg  app.test.cfg  pyproject.toml  requirements.test.txt  setup.cfg  setup.py  tox.ini
anyblok_fastapi/: __init__.py  common.py  config.py  conftest.py  fastapi.py  gunicorn.py  init.py  scripts.py
anyblok_fastapi/anyblok_fastapi/: __init__.py  api.py  model.py  schema.py
anyblok_fastapi/anyblok_fastapi/tests/: test_model.py
anyblok_fastapi/test_bloks/test_blok1/: __init__.py  api.py  apiv2.py  model.py  schema.py
anyblok_fastapi/tests/: conftest.py  test_blok.py  test_blokv2.py
